[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Tiles/tile_0122.png" type="Texture" id=1]
[ext_resource path="res://Assets/Tiles/tile_0022.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Money.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/abstract-blur-background-with-pastel-color-free-vector.jpg" type="Texture" id=7]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 ) ]

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="NavigationPolygon" id=4]
vertices = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 ) ]

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="TileSet" id=7]
0/name = "tile_0122.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 18, 18 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/occluder = SubResource( 2 )
0/navigation_offset = Vector2( 0, 0 )
0/navigation = SubResource( 1 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tile_0122.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 18, -18, 18, 18 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "tile_0022.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 18, 18 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/occluder = SubResource( 5 )
2/navigation_offset = Vector2( 0, 0 )
2/navigation = SubResource( 4 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 6 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 43, 132 )

[node name="Main" type="Node2D"]
script = ExtResource( 5 )

[node name="Abstract-blur-background-with-pastel-color-free-vector" type="Sprite" parent="."]
position = Vector2( 316, 373 )
scale = Vector2( 2.62, 4.315 )
texture = ExtResource( 7 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 3, 3 )
tile_set = SubResource( 7 )
cell_size = Vector2( 18, 18 )
format = 1
tile_data = PoolIntArray( 393215, 2, 0, 327680, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 327690, 2, 0, 327691, 2, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 851967, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 917503, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 983039, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 39, 246 )
frame = 1
playing = true

[node name="OutZone" type="Area2D" parent="."]
position = Vector2( -32, 227 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutZone"]
position = Vector2( -27, -82 )
shape = SubResource( 8 )

[node name="Money" parent="." instance=ExtResource( 6 )]
margin_left = 556.0
margin_right = 596.0
margin_bottom = 32.0

[node name="Timer" type="Timer" parent="Money"]
one_shot = true
autostart = true

[node name="enemy" parent="." instance=ExtResource( 4 )]
position = Vector2( 571, 242 )
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="."]
margin_left = 26.0
margin_top = 336.0
margin_right = 260.0
margin_bottom = 386.0
text = "Enemy Speed"

[connection signal="area_entered" from="Player/SliceZone" to="." method="_on_SliceZone_area_entered"]
[connection signal="timeout" from="Money/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[editable path="Player"]
